force-app/main/default/objects/Discipline_Mapping__mdt.object
<CustomObject>
    <fields>
        <fullName>Area__c</fullName>
        <label>Area</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maintenance_Plant__c</fullName>
        <label>Maintenance Plant</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plant_Section_Description_Old__c</fullName>
        <label>Plant Section Description Old</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plant_Section_Description__c</fullName>
        <label>Plant Section Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plant_Section__c</fullName>
        <label>Plant Section</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role_1__c</fullName>
        <label>Role 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role_2__c</fullName>
        <label>Role 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role_3__c</fullName>
        <label>Role 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Discipline Mapping</label>
</CustomObject>